--- a/style.css
+++ b/style.css
@@ -131,6 +131,18 @@ body{
     letter-spacing: 0.8px;
 }
 
+body {
+    background-image: 
+      url('./images/bg-pattern-top.svg'),
+      url('./images/bg-pattern-bottom.svg');
+    background-position: 
+      right calc(47vw + 15%) bottom calc(52vh - 12vw),
+      left calc(40vw + 25%) top calc(72vh - 10vw);
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    overflow-x: hidden;
+  }
+
 
 .footer{
     display: none;
