--- a/style.css
+++ b/style.css
@@ -1,39 +1,4 @@
-/**<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-<style>
-  .attribution { font-size: 11px; text-align: center; }
-  .attribution a { color: hsl(228, 45%, 44%); }
-</style>
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-Dark cyan: hsl(185, 75%, 39%)
-Very dark desaturated blue: hsl(229, 23%, 23%)
-Dark grayish blue: hsl(227, 10%, 46%)
-
-### Neutral
-
-Dark gray: hsl(0, 0%, 59%)
-
-## Typography
-
-### Body Copy
-
-- Font size (name and stats): 18px
-
-### Font
-
-- Family: [Kumbh Sans](https://fonts.google.com/specimen/Kumbh+Sans)
-- Weights: 400, 700
-
-**/
-  
+ 
 * {
     margin: 0;
     padding: 0;
@@ -52,6 +17,16 @@ body{
     max-width: 100%;
 }
 
+/** Background - bottom **/
+
+.bg-top {
+    position: relative;
+    bottom: 25em;
+    right: -10rem;
+    z-index: -1;
+  }
+
+/** Card **/
 
 .container{
     border: 0 solid hsl(0, 0%, 100%);
@@ -85,6 +60,8 @@ body{
     
 }
 
+/** Text adjustments **/
+
 #picture, #personal{
     text-align: center;
     line-height: 18px;
@@ -111,6 +88,8 @@ body{
     color: hsl(185, 5%, 63%);
 }
 
+/** Social stats **/
+
 .social {
     border: 0 solid hsl(0, 0%, 100%);
     border-top: 1px solid rgba(128, 128, 128, 0.507);
@@ -131,18 +110,16 @@ body{
     letter-spacing: 0.8px;
 }
 
-body {
-    background-image: 
-      url('./images/bg-pattern-top.svg'),
-      url('./images/bg-pattern-bottom.svg');
-    background-position: 
-      right calc(47vw + 15%) bottom calc(52vh - 12vw),
-      left calc(40vw + 25%) top calc(72vh - 10vw);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    overflow-x: hidden;
-  }
+/** Background - bottom **/
 
+.bg-bottom {
+    position: relative;
+    top: 30rem;
+    right: 15rem;
+    z-index: -1;
+}
+
+/** Footer  hidden **/
 
 .footer{
     display: none;
