--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     max-width: 100%;
 }
 
-/** Background - bottom **/
+/** Background - top **/
 
 .bg-top {
     position: relative;
@@ -112,15 +112,14 @@ body{
 
 /** Background - bottom **/
 
-.bg-bottom {
-    position: relative;
-    top: 30rem;
-    right: 15rem;
-    z-index: -1;
-}
-
-/** Footer  hidden **/
-
-.footer{
-    display: none;
-}
+body {
+    background-image: 
+      url('./images/bg-pattern-top.svg'),
+      url('./images/bg-pattern-bottom.svg');
+    background-position: 
+      right calc(47vw + 15%) bottom calc(65vh - 15vw),
+      left calc(40vw + 25%) top calc(72vh - 15vw);
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    overflow-x: hidden;
+  }
